--- a/taller/cami.html
+++ b/taller/cami.html
@@ -79,3 +79,137 @@
     <iframe width="560" height="315" src="https://youtu.be/1HgFe70RPK0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 </html>
+
+
+css:
+
+body {
+    color: #ffffff;
+    font-family: 'Libre Baskerville', serif;
+    margin: 0;
+    padding: 0;
+    background: url('https://fotos.perfil.com/2019/06/01/trim/1280/720/anabelle-3.png') no-repeat center center fixed;
+    background-size: cover;
+}
+
+header {
+    text-align: center;
+    padding: 50px 0;
+    border-bottom: 2px solid #ffffff;
+    margin-bottom: 50px;
+    position: relative;
+    overflow: hidden;
+}
+
+header:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: radial-gradient(circle, rgba(0,0,0,0) 0%, rgba(0,0,0,0.5) 100%);
+    z-index: -1;
+}
+
+h1 {
+    font-size: 48px;
+    margin: 0;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    position: relative;
+    z-index: 1;
+}
+
+section {
+    padding: 50px;
+    margin-bottom: 50px;
+    border-radius: 20px;
+    box-shadow: 0 0 40px rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.7);
+    border: 2px solid #ffffff;
+    position: relative;
+    overflow: hidden;
+}
+
+section:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to right, rgba(0,0,0,0.5) 0%, rgba(0,0,0,0.7) 50%, rgba(0,0,0,0.5) 100%);
+    z-index: -1;
+    border-radius: 20px;
+}
+
+h2 {
+    font-size: 36px;
+    margin-top: 0;
+    margin-bottom: 20px;
+    text-align: center;
+    position: relative;
+    z-index: 1;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+.movie-info {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    gap: 20px;
+    margin-top: 20px;
+    position: relative;
+    z-index: 1;
+}
+
+.movie-info img {
+    border-radius: 10px;
+    box-shadow: 0 0 20px rgba(255, 255, 255, 0.3);
+    max-width: 100%;
+    transition: transform 0.3s ease-in-out;
+}
+
+.movie-info img:hover {
+    transform: translateY(-5px);
+}
+
+p {
+    font-size: 20px;
+    line-height: 1.5;
+    margin: 0;
+    position: relative;
+    z-index: 1;
+}
+
+footer {
+    text-align: center;
+    padding: 20px 0;
+    background-color: rgba(0, 0, 0, 0.7);
+    border-top: 2px solid #ffffff;
+    position: relative;
+    z-index: 1;
+}
+
+iframe {
+    display: block;
+    margin: 0 auto;
+    border-radius: 20px;
+    box-shadow: 0 0 40px rgba(0, 0, 0, 0.5);
+    position: relative;
+    z-index: 1;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(0,0,0,0.8) 100%);
+    z-index: 0;
+    border-radius: 20px;
+}
+
+
