--- a/taller/cami.html
+++ b/taller/cami.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <link rel="stylesheet" href="system.css">
-<body style="background-image: url('https://img.freepik.com/foto-gratis/luces-neon-degradadas-abstractas_23-2149279115.jpg'); background-size: cover; color: white;">
+<body style="background-image: url('https://images.ecestaticos.com/O8_cCY2tFHNUTb3oohshzZH338o=/147x16:1087x721/1200x900/filters:fill(white):format(jpg)/f.elconfidencial.com%2Foriginal%2F7c7%2F036%2Fa8a%2F7c7036a8a11e8a57f42cf01a41a87817.jpg'); background-size: cover; color: white;">
     <header>
         <h1 style="color: white;">Bienvenido a la Página de Películas de El Conjuro</h1>
     </header>
